# VTON360

./: .gitignore  README.md  index.html  requirements.txt
src/: README.md  pyproject.toml
src/demo_data/: campath.json
src/demo_data/Thuman2.0/0009/: transforms.json  transforms_bk.json
src/demo_data/Thuman2.0/0009/parm/: 000_extrinsic.npy  001_extrinsic.npy  002_extrinsic.npy  003_extrinsic.npy  004_extrinsic.npy  005_extrinsic.npy  006_extrinsic.npy  007_extrinsic.npy  (+155 more)
src/demo_data/Thuman2.0/0024/: transforms.json.bak  transforms_bk.json
src/demo_data/Thuman2.0/0228/: transforms.json  transforms_bk.json
src/demo_data/splatfactox_demo_data/: transforms.json
src/multiview_consist_edit/: MVHumanNet_multi.py  Thuman2_multi.py  infer_tryon_multi.py  postprecess_mvhumannet.py  postprecess_thuman.py  train_tryon_multi.py  utils.py
src/multiview_consist_edit/config/: infer_tryon_multi.yaml  train_tryon_multi.yaml
src/multiview_consist_edit/data/: MVHumanNet_multi.py  Thuman2_multi.py  camera_utils.py
src/multiview_consist_edit/models/: ReferenceEncoder.py  ReferenceNet.py  ReferenceNet_attention_multi_fp16.py  mv_attn_processor.py
src/multiview_consist_edit/parse_tool/: postprocess_parse.py
src/multiview_consist_edit/pipelines/: pipeline_tryon_multi.py
src/render_from_thuman/: get_cloth.py  get_cloth_mvhumannet.py  get_cloth_thuman.py  inv_export.py  process2ns_fmt.py  render_multiview_images.py
src/render_from_thuman/taichi_three/: loader.py  model.py
src/scripts/: splatfactox.sh
src/splatfactox/: README.md  __init__.py  config.py  splatfactox.py
(+325 files in other folders)
